--- a/style.css
+++ b/style.css
@@ -60,6 +60,27 @@ body{
     grid-template-columns: 14rem auto 23rem;
 }
 
+.b-new{
+display: block;
+width: 100px;
+font-family: Arial;
+font-weight: 700;
+background-color: #7380ec;
+border-radius: 10px;
+padding: 10px 20px;
+text-decoration: none;
+color: white;
+cursor: pointer;
+}
+
+.b-new:hover{
+    background-color: transparent;
+    border: 2px solid;
+    color: aquamarine;
+    transition: 0.2s ease;
+}
+
+
 a{
     color: var(--color-dark);
 }
@@ -371,4 +392,61 @@ main .recent-orders a{
     display: block;
     margin: 1rem auto;
     color: var(--color-primary);
+}
+
+/** ========= RIGHT ========= */
+.right{
+    margin-top: 1.4rem;
+}
+
+.right .top{
+    display: flex;
+    justify-content: end;
+    gap: 2rem;
+}
+
+.right .top .button{
+    display: none;
+}
+
+.right .theme-toggler{
+    background: var(--color--light);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 1.6rem;
+    width: 4.2rem;
+    cursor: pointer;
+    border-radius:var(--border-radius-1) ;
+}
+
+.right .theme-toggler span{
+    font-size: 1.2rem;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+/* === FRASE DIARIAS === */
+.f2{
+    align-items: center;
+    justify-content: center;
+}
+.right .recent-orders{
+    margin-top:1rem;
+}
+
+.right .recent-updates h2{
+    margin-bottom: 0.8rem;
+}
+
+.right .recent-updates .updates{
+    background: var(--color-white);
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
 }
